--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -13,5 +13,8 @@
     <color name="theme_color">#323232</color>
 
     <color name="edit_text_bg">#D9D9D9</color>
-    <color name="edit_text_ip">#C0BDBD</color>
+    <color name="edit_text_hint">#C0BDBD</color>
+    <color name="edit_text_ip">#3C3A3A</color>
+
+    <color name="text_view">#FFFFFF</color>
 </resources>
