--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/background"
     android:layout_height="match_parent"
     tools:context=".SignUpActivity">
 
     <ImageView
         android:id="@+id/logoImageViewSignUp"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="180dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
         android:src="@drawable/elite_works_logo"
         android:adjustViewBounds="true"
         android:layout_marginTop="30dp"
-        app:layout_constraintDimensionRatio="H, 20:7"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        />
 
     <TextView
         android:id="@+id/signUp_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up"
+        android:layout_gravity="center"
         android:textColor="@color/text_view"
         android:textSize="32sp"
         android:layout_marginTop="20sp"
         app:fontFamily="@font/poppins_bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logoImageViewSignUp" />
+        />
 
     <LinearLayout
         android:id="@+id/ll_email_signup"
@@ -42,9 +40,7 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:background="@drawable/edit_text_background"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signUp_title">
+        >
 
         <androidx.cardview.widget.CardView
             android:layout_width="55dp"
@@ -87,10 +83,7 @@
         android:layout_marginTop="24dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:background="@drawable/edit_text_background"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_email_signup">
+        android:background="@drawable/edit_text_background">
 
         <androidx.cardview.widget.CardView
             android:layout_width="55dp"
@@ -135,8 +128,6 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:background="@drawable/edit_text_background"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ll_password_signup">
 
         <androidx.cardview.widget.CardView
@@ -170,5 +161,19 @@
             android:textColorHint="@color/edit_text_hint"
             app:fontFamily="@font/poppins"/>
     </LinearLayout>
+
+   <com.google.android.material.button.MaterialButton
+       android:layout_width="match_parent"
+       android:layout_height="60dp"
+       android:layout_marginStart="25dp"
+       android:layout_marginEnd="25dp"
+       app:backgroundTint="@color/blue"
+       app:cornerRadius="10dp"
+       android:layout_marginTop="25dp"
+       android:textAllCaps="false"
+       android:textColor="@color/text_view"
+       android:fontFamily="@font/poppins_bold"
+       android:text="Sign Up"/>
+
     <!--    add buttons-->
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
