--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -176,5 +176,8 @@
        android:textAllCaps="false"
        android:textColor="@color/text_view"
        android:fontFamily="@font/poppins_bold"
+       app:icon="@drawable/ic_baseline_arrow_forward_24"
+       app:iconTint="@color/text_view"
+       app:iconGravity="textEnd"
        android:text="Sign Up"/>
 </LinearLayout>
